--- a/RentalService/dockerfile
+++ b/RentalService/dockerfile
@@ -1,9 +1,7 @@
 FROM eclipse-temurin:21
 
-VOLUME /tmp
-
 EXPOSE 8080
 
-ADD ./build/libs/RentalService-0.0.1-SNAPSHOT.jar app.jar
+ADD build/libs/RentalService-0.0.1-SNAPSHOT.jar app.jar
 
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
